--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow_left_black" />
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="General Info"
         android:textColor="#0A0A0A"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="of 5"
         android:textColor="#0A0A0A"
@@ -48,20 +48,21 @@
         android:id="@+id/page_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="344dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="4dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="1 "
         android:textColor="#E53935"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintEnd_toStartOf="@+id/page_5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/line_full"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_general"
@@ -72,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Full Name"
         android:textSize="14sp"
@@ -84,8 +85,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
-        android:text="Jonathan Doe"
+        android:layout_marginTop="10dp"
+        android:text="Rizal Elsa Fanny"
+        android:textColor="#0A0A0A"
         android:textSize="18sp"
         android:fontFamily="@font/futura_pt_demibold"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,18 +97,20 @@
         android:id="@+id/line2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
+        android:src="@drawable/red_line_padded"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fullname"
-        android:src="@drawable/red_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_fullname" />
 
     <TextView
         android:id="@+id/txt_email_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Email Address"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Mobile Number"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +152,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Country"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +183,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Password"
         app:layout_constraintStart_toStartOf="parent"
@@ -200,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Confirm Password"
         app:layout_constraintStart_toStartOf="parent"
@@ -221,7 +225,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Referal code (Optional)"
         app:layout_constraintStart_toStartOf="parent"
@@ -239,8 +243,9 @@
 
     <Button
         android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_red_large"
@@ -248,6 +253,7 @@
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line8" />
 
