--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -86,168 +86,127 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
-        android:text="Rizal Elsa Fanny"
-        android:textColor="#0A0A0A"
-        android:textSize="18sp"
+        android:layout_marginRight="50dp"
+        android:drawableBottom="@drawable/red_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
+        android:text="Rizal Elsa Fanny"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
-    <ImageView
-        android:id="@+id/line2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/red_line_padded"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fullname" />
 
-    <TextView
+    <EditText
         android:id="@+id/txt_email_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        android:background="#00000000"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Email Address"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line2" />
-
-    <ImageView
-        android:id="@+id/line3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:hint="Email Address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_email_add"
-        app:srcCompat="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_fullname" />
 
-    <TextView
+    <EditText
         android:id="@+id/txt_mobile_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:background="#00000000"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Mobile Number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line3" />
-
-    <ImageView
-        android:id="@+id/line4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:hint="Mobile Number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_mobile_num"
-        android:src="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_add" />
 
-    <TextView
+
+    <EditText
         android:id="@+id/txt_country_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        android:background="#00000000"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Country"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line4" />
-
-    <ImageView
-        android:id="@+id/line5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:hint="Country"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_country_"
-        app:srcCompat="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_mobile_num" />
 
-    <ImageView
+
+    <Spinner
         android:id="@+id/triang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="60dp"
-        app:layout_constraintBottom_toTopOf="@+id/line5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/caret_down" />
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:background="@drawable/caret_down"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_country_"
+        app:layout_constraintEnd_toEndOf="@+id/txt_country_"
+        app:layout_constraintTop_toTopOf="@+id/txt_country_" />
 
-    <TextView
+    <EditText
         android:id="@+id/txt_passwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line5" />
-
-    <ImageView
-        android:id="@+id/line6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:background="#00000000"
+        android:hint="Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_passwd"
-        app:srcCompat="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_country_" />
 
-    <TextView
+
+    <EditText
         android:id="@+id/txt_confirm_passwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Confirm Password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line6" />
-
-    <ImageView
-        android:id="@+id/line7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:hint="Confirm Password"
+        android:background="#00000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_passwd"
-        app:srcCompat="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_passwd" />
 
-    <TextView
+
+    <EditText
         android:id="@+id/txt_referal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
-        android:text="Referal code (Optional)"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line7" />
-
-    <ImageView
-        android:id="@+id/line8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:hint="Referal code (Optional)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_referal"
-        app:srcCompat="@drawable/grey_line_padded" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_passwd" />
+
 
     <Button
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/btn_red_large"
         android:fontFamily="@font/futura_pt_demibold"
         android:text="Next"
@@ -255,7 +214,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line8" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_referal" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
