--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -117,7 +117,7 @@ R
         android:layout_height="wrap_content"
         android:layout_marginRight="35dp"
         android:layout_marginTop="10dp"
-        android:text="Rizal Elsa Fanny"
+        android:text="Jonathan Doe"
         android:fontFamily="@font/futura_pt_demibold"
         android:textColor="#0A0A0A"
         android:textSize="16sp"
@@ -151,7 +151,7 @@ R
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="35dp"
-        android:text="rizalelsaf@gmail.com"
+        android:text="jonathan.designer@gmail.com"
         android:fontFamily="@font/futura_pt_demibold"
         android:textSize="16sp"
         android:textColor="#0A0A0A"
@@ -219,7 +219,7 @@ R
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="35dp"
-        android:text="+62 85655695629"
+        android:text="+62123455667"
         android:fontFamily="@font/futura_pt_demibold"
         android:textSize="16sp"
         android:textColor="#0A0A0A"
@@ -253,7 +253,7 @@ R
         android:layout_height="wrap_content"
         android:layout_marginRight="35dp"
         android:layout_marginTop="10dp"
-        android:text="Nganjuk"
+        android:text="Misisipi"
         android:fontFamily="@font/futura_pt_demibold"
         android:textSize="16sp"
         android:textColor="#0A0A0A"
@@ -287,7 +287,7 @@ R
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="35dp"
-        android:text="Jl. Diponegoro 1 No. 51 Nganjuk\n                                           East Java"
+        android:text="296 Welingtown"
         android:fontFamily="@font/futura_pt_demibold"
         android:textColor="#0A0A0A"
         android:textSize="16sp"
