--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -195,6 +195,7 @@
         android:drawableBottom="@drawable/grey_line_padded"
         android:fontFamily="@font/futura_pt_demibold"
         android:hint="Referal code (Optional)"
+        android:background="#00000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_confirm_passwd" />
