--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/left_arrow"
+        android:onClick="backToMain"
         app:layout_constraintStart_toStartOf="@+id/bg_logo"
         app:layout_constraintTop_toTopOf="@+id/bg_logo" />
 
